notes about git added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h3>Tydzień 4</h3>
                 <ul>
                     <li>Dzień z życia frontendowca</li>
-                    <li>GIT: pierwsze starcie</li>
+                    <li><a href="notatki.html#git">GIT: pierwsze starcie</a></li>
                     <li>Code: konfiguracja edytora</li>
                     <li>CSS: box model, pozycje, floaty</li>
                     <li>Block - element - modifier</li>
