Added notes: about git and box model - display, overflow

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <li>Dzień z życia frontendowca</li>
                     <li><a href="notatki.html#git">GIT: pierwsze starcie</a></li>
                     <li>Code: konfiguracja edytora</li>
-                    <li>CSS: box model, pozycje, floaty</li>
+                    <li><a href="nauka-css.html#boxmodel">CSS: box model, pozycje, floaty</a></li>
                     <li>Block - element - modifier</li>
                     <li>JavaScript: typy i struktury danych, immutability</li>
                     <li>DOM-owe przedszkole</li>
