--- a/nauka-js.html
+++ b/nauka-js.html
@@ -27,7 +27,7 @@
         <h1>JavaScript</h1>
         <section>
 
-            <h2><a href="JavaScript-notatki.html">Notatki z JS</a></h2>
+            <h2><a href="JavaScript-notatki.html" target="_blank">Notatki z JS</a></h2>
 
             <article>
                 <h3 id="magic">JS - Magia programowania</h3>
