--- a/notatki.html
+++ b/notatki.html
@@ -22,7 +22,7 @@
         
     </header>
     <main>
-        <h1>Iva Borkowska - zapiski przyszłego Frontendowca</h1>
+        <h1><a href="GIT.html" target="_blank">NOTATKI</a></h1>
         <article>
             <h3>Zasady do zapamiętania</h3>
             <p class="principle">1. Każda sekcja powinna mieć nagłówek</p>
