--- a/nauka-html.html
+++ b/nauka-html.html
@@ -1,88 +1,96 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700Roboto:300,400,500,700&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
     <title>WTF - Iva Borkowska</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="notatki.html">Notatki</a>
-            <a href="nauka-html.html">HTML</a>
-            <a href="nauka-css.html">CSS</a>
-            <a href="nauka-js.html">JavaScript</a>
-            <a href="about-me.html">O mnie</a>
-        </nav>
-        
+      <nav>
+        <a href="index.html">Strona główna</a>
+        <a href="notatki.html">Notatki</a>
+        <a href="nauka-html.html">HTML</a>
+        <a href="nauka-css.html">CSS</a>
+        <a href="nauka-js.html">JavaScript</a>
+        <a href="about-me.html">O mnie</a>
+      </nav>
     </header>
 
     <main id="top">
-        <h1>HTML</h1>
-        <section>
-            <h2>Notatki z HTML</h2>
-            <article>
-                <h3>Zasady do zapamiętania</h3>
-                <p class="principle">1. Każda sekcja powinna mieć nagłówek</p>
-            </article>
+      <h1>HTML</h1>
+      <section>
+        <h2>Notatki z HTML</h2>
+        <article>
+          <h3>Zasady do zapamiętania</h3>
+          <p class="principle">1. Każda sekcja powinna mieć nagłówek</p>
+        </article>
 
-            <article>
-                <h3 id="tags">Znaczniki HTML5</h3>
+        <article>
+          <h3 id="tags">Znaczniki HTML5</h3>
 
-                <ul>
-                    <li>główna część <b>&lt;main&gt;</b></li>
-                    <li>sekcje <b>&lt;section&gt;</b></li>
-                    <li>samodzielne treści <b>&lt;article&gt;</b></li>
-                    <li>nagłówek dokumentu, sekcji lub artykułu <b>&lt;header&gt;</b></li>
-                    <li>stopka dokumentu / sekcji <b>&lt;footer&gt;</b></li>
-                    <li>nagłówki <b>&lt;h1-h6&gt;</b></li>
-                    <li>paragraf <b>&lt;p&gt;</b></li>
-                </ul><br>
-            </article>
-            <article>
-                <h3 id="attributes">ATRYBUTY HTML</h3>
-                <h4>ŁĄCZA/LINKI - a href</h4>
+          <ul>
+            <li>główna część <b>&lt;main&gt;</b></li>
+            <li>sekcje <b>&lt;section&gt;</b></li>
+            <li>samodzielne treści <b>&lt;article&gt;</b></li>
+            <li>
+              nagłówek dokumentu, sekcji lub artykułu <b>&lt;header&gt;</b>
+            </li>
+            <li>stopka dokumentu / sekcji <b>&lt;footer&gt;</b></li>
+            <li>nagłówki <b>&lt;h1-h6&gt;</b></li>
+            <li>paragraf <b>&lt;p&gt;</b></li>
+          </ul>
+          <br />
+        </article>
+        <article>
+          <h3 id="attributes">ATRYBUTY HTML</h3>
+          <h4>ŁĄCZA/LINKI - a href</h4>
 
-                <ol>
-                    <li>linki do stron zewnętrznych, mogą się otwierać w tym samym lub innym oknie (atrybut target)</li>
-                    <li>łącza wewnętrzne - do nawigacji w obrębie dokumentacji - kotwiczymy po #id</li>
-                </ol>
+          <ol>
+            <li>
+              linki do stron zewnętrznych, mogą się otwierać w tym samym lub
+              innym oknie (atrybut target)
+            </li>
+            <li>
+              łącza wewnętrzne - do nawigacji w obrębie dokumentacji -
+              kotwiczymy po #id
+            </li>
+          </ol>
+        </article>
+        <article>
+          <h4>NAWIGACJA - nav</h4>
 
-            </article>
-            <article>
-                <h4>NAWIGACJA - nav</h4>
+          <ol>
+            <li>
+              Każdą treść, która jest powtarzalna wyrzucamy poza main - w tym
+              nawigację i stopkę strony
+            </li>
+            <li>Nawigację strony robimy w hederze głównym</li>
+          </ol>
+        </article>
+        <article>
+          <h4>OBRAZKI - img</h4>
 
-                <ol>
-                    <li>Każdą treść, która jest powtarzalna wyrzucamy poza main - w tym nawigację i stopkę strony</li>
-                    <li>Nawigację strony robimy w hederze głównym</li>
-                </ol>
+          <ol>
+            <li>w atrybucie src podajemy źródło obrazka.</li>
+            <li>
+              w atrybucie alt opis co znajduje się na obrazku (np. dla
+              niewidomych korzystających z czytników)
+            </li>
+          </ol>
 
-            </article>
-            <article>
-                <h4>OBRAZKI - img</h4>
-
-                <ol>
-                    <li>w atrybucie src podajemy źródło obrazka.</li>
-                    <li>w atrybucie alt opis co znajduje się na obrazku (np. dla niewidomych korzystających z czytników)
-                    </li>
-                </ol>
-
-                <a href="#top">Wróć na górę strony</a>
-            </article>
-        </section>
-
-
+          <a href="#top">Wróć na górę strony</a>
+        </article>
+      </section>
     </main>
     <footer>
-        Strona domowa Iwony Borkowskiej
+      Strona domowa Iwony Borkowskiej
     </footer>
-</body>
-
+  </body>
 </html>
