all html code after validation

--- a/about-me.html
+++ b/about-me.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700Roboto:300,400,500,700&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
     <title>WTF - Iva Borkowska</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="notatki.html">Notatki</a>
-            <a href="nauka-html.html">HTML</a>
-            <a href="nauka-css.html">CSS</a>
-            <a href="nauka-js.html">JavaScript</a>
-            <a href="about-me.html">O mnie</a>
-        </nav>
-        
-        
+      <nav>
+        <a href="index.html">Strona główna</a>
+        <a href="notatki.html">Notatki</a>
+        <a href="nauka-html.html">HTML</a>
+        <a href="nauka-css.html">CSS</a>
+        <a href="nauka-js.html">JavaScript</a>
+        <a href="about-me.html">O mnie</a>
+      </nav>
     </header>
     <main>
-    <h1>O MNIE</h1>
-    <section>
+      <h1>O MNIE</h1>
+      <section>
         <h2>Kim jestem?</h2>
-        <img class="my-photo" src="img/icon.jpg" alt="Iva Borkowska">
-        <p>Hej! Czasem na proste pytania, takie jak "Kim jesteś?", nie ma prostych odpowiedzi...
-            Jako osoba ceniąca sobie pozytywne myślenie odpowadam śmiało: I am a Developer. The WEB DEVELOPER.
-            Cała reszta nie ma znaczenia! 😎
-            I tej wersji będę się trzymać do końca kursu WTF: Co ten frontend.</p>
-
-
-
-    </section>
-</main>
+        <img class="my-photo" src="img/icon.jpg" alt="Iva Borkowska" />
+        <p>
+          Hej! Czasem na proste pytania, takie jak "Kim jesteś?", nie ma
+          prostych odpowiedzi... Jako osoba ceniąca sobie pozytywne myślenie
+          odpowadam śmiało: I am a Developer. The WEB DEVELOPER. Cała reszta nie
+          ma znaczenia! 😎 I tej wersji będę się trzymać do końca kursu WTF: Co
+          ten frontend.
+        </p>
+      </section>
+    </main>
     <footer>
-        Strona domowa Iwony Borkowskiej
+      Strona domowa Iwony Borkowskiej
     </footer>
-</body>
-
+  </body>
 </html>
