--- a/index.html
+++ b/index.html
@@ -1,183 +1,257 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700Roboto:300,400,500,700&display=swap"
-        rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
     <title>WTF - Iva Borkowska</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="main-header">
-
-        <nav class="navigation">
-            <a class="navigation__link" href="index.html">Strona główna</a>
-            <a class="navigation__link" href="notatki.html">Notatki</a>
-            <a class="navigation__link" href="nauka-html.html">HTML</a>
-            <a class="navigation__link" href="nauka-css.html">CSS</a>
-            <a class="navigation__link" href="nauka-js.html">JavaScript</a>
-            <a class="navigation__link" href="about-me.html">O mnie</a>
-        </nav>
-
+      <nav class="navigation">
+        <a class="navigation__link" href="index.html">Strona główna</a>
+        <a class="navigation__link" href="notatki.html">Notatki</a>
+        <a class="navigation__link" href="nauka-html.html">HTML</a>
+        <a class="navigation__link" href="nauka-css.html">CSS</a>
+        <a class="navigation__link" href="nauka-js.html">JavaScript</a>
+        <a class="navigation__link" href="about-me.html">O mnie</a>
+      </nav>
     </header>
     <main class="main" id="top">
-        <h1 class="main__title">Iva Borkowska - zapiski przyszłego Frontendowca</h1>
-        <section class="main__section">
-            <h2 class="section__header">Przydatne linki</h2>
+      <h1 class="main__title">
+        Iva Borkowska - zapiski przyszłego Frontendowca
+      </h1>
+      <section class="main__section">
+        <h2 class="section__header">Przydatne linki</h2>
 
-            <a class="section__link" href="https://validator.w3.org/nu/#textarea" target="_blank">Walidator Kodu</a><br>
-            <a class="section__link" href="https://www.w3.org/TR/html52/" target="_blank">W3C - Specyfikacja HTML</a><br>
-            <a class="section__link" href="https://www.w3.org/TR/CSS/" target="_blank">W3C - Specyfikacja CSS</a><br>
-        </section>
-        <section class="main__section">
-            <h2 class="section__header">Program Szkolenia</h2>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 1</h3>
-                <ul class="article__notes">
-                    <li><a class="article__link" href="notatki.html#definition">Czym jest frontend?</a></li>
-                    <li>Różnice w pracy na systemach Windows / Linux / MacOS</li>
-                    <li>Przedstawienie narzędzi wykorzystywanych w trakcie szkolenia</li>
-                    <li><a class="article__link" href="https://roadmap.sh/frontend" target="_blank">Ścieżka rozwoju</a><br></li>
-                    <li>Mój pierwszy projekt!</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 2</h3>
-                <ul class="article__notes">
-                    <li>Warstwy strony internetowej</li>
-                    <li><a class="article__link" href="nauka-html.html#tags">WTF: znaczniki HTML5</a></li>
-                    <li><a class="article__link" href="nauka-css.html#syntax">WTF: CSS-składnia</a></li>
-                    <li><a class="article__link" href="nauka-js.html#magic">Magia programowania</a></li>
-                    <li>Devtools: podglądamy (i zmieniamy) istniejące strony</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 3</h3>
-                <ul class="article__notes">
-                    <li>Jak wygląda planowanie pracy za pomocą metody Kanban?</li>
-                    <li><a class="article__link" href="nauka-html.html#attributes">Atrybuty w HTML</a></li>
-                    <li><a class="article__link" href="notatki.html#naming">Nazywanie rzeczy: Opowieść o wężu, kebabie, wielbłądzie i
-                            Pascalu</a></li>
-                    <li><a class="article__link" href="nauka-css.html#classes">Klasy CSS, specyficzność</a></li>
-                    <li><a class="article__link" href="notatki.html#browser">Jak działa internet i przeglądarka?</a></li>
-                    <li><a class="article__link" href="nauka-js.html#entrance">WTF: JavaScript - wstęp</a></li>
-                    <li>Terminal, czyli ocb z tym czarnym okienkiem</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 4</h3>
-                <ul class="article__notes">
-                    <li>Dzień z życia frontendowca</li>
-                    <li><a class="article__link" href="notatki.html#git">GIT: pierwsze starcie</a></li>
-                    <li>Code: konfiguracja edytora</li>
-                    <li><a class="article__link" href="nauka-css.html#boxmodel">CSS: box model, pozycje, floaty</a></li>
-                    <li>Block - element - modifier</li>
-                    <li>JavaScript: typy i struktury danych, immutability</li>
-                    <li>DOM-owe przedszkole</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 5</h3>
-                <ul class="article__notes">
-                    <li>Co robić, jak nie działa?</li>
-                    <li>Figma: grafik cięcie — też zajęcie</li>
-                    <li>HTML: listy, tabele, definicje</li>
-                    <li>CSS: flexbox, tła</li>
-                    <li>Normalizacja vs reset</li>
-                    <li>JavaScript: funkcje</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 6</h3>
-                <ul class="article__notes">
-                    <li>HTML: formularze</li>
-                    <li>Czym się różni GET od POST?</li>
-                    <li>CSS: grid, media queries</li>
-                    <li>JavaScript: eventy i event loop
-                        🍔 menu</li>
-                    <li>GitHub pages: statyczny hosting</li>
-
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 7</h3>
-                <ul class="article__notes">
-                    <li>NODEJS & NPM: podstawowe narzędzia współczesnego frontendowca</li>
-                    <li>Skrypty NPM</li>
-                    <li>SASS: korzystamy z preprocesora CSS</li>
-                    <li>JavaScript: obiekty / prototypy / klasy</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 8</h3>
-                <ul class="article__notes">
-                    <li>JavaScript: import / export</li>
-                    <li>Webpack: wstęp do narzędzia</li>
-                    <li>Webpack: moduły i pluginy</li>
-                    <li>WTF Webpack StarterKit</li>
-                    <li>CSS: zmienne</li>
-                    <li>HTML: Hiperdivoza i inne choroby Twojego kodu</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 9</h3>
-                <ul class="article__notes">
-                    <li>CSS: prefixy, customowe fonty</li>
-                    <li>Markdown</li>
-                    <li>Czy frontendowiec musi być grafikiem? Prototypowanie w Figmie.</li>
-                    <li>Git: branche</li>
-                    <li>JavaScript: cookies, local i session storage</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 10</h3>
-                <ul class="article__notes">
-                    <li>Z kim pracuje frontendowiec?</li>
-                    <li>CSS: animacje i przejścia</li>
-                    <li>SVG: praca z grafiką wektorową</li>
-                    <li>OpenGraph</li>
-                    <li>Progressive Web Apps</li>
-                    <li>WCAG</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 11</h3>
-                <ul class="article__notes">
-                    <li>JavaScript: praca z API / JSON</li>
-                    <li>Postman: podglądamy i tworzymy zapytania do serwera</li>
-                    <li>U mnie działa: testujemy nasze strony na różnych przeglądarkach</li>
-                    <li>Optymalizacja: lighthouse, minifikacja zasobów, krytyczny CSS</li>
-                    <li>GIT: mój pierwszy pull request</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 12</h3>
-                <ul class="article__notes">
-                    <li>HTML: multimedia i zewnętrzne zasoby</li>
-                    <li>Licencje, grafiki, materiały</li>
-                    <li>CSS: ~ + › []</li>
-                    <li>Projekt od A do ...</li>
-                </ul>
-            </article>
-            <article class="section__article">
-                <h3 class="article__header">Tydzień 13</h3>
-                <ul class="article__notes">
-                    <li>Pierwsza praca</li>
-                    <li>Jak wygląda rozmowa kwalifikacyjna?</li>
-                    <li>Jak przygotować swoje CV?
-                    <li>Przyszłość frontendu</li>
-                    <li>WTF: i co dalej?</li>
-                </ul>
-            </article>
-        </section>
+        <a
+          class="section__link"
+          href="https://validator.w3.org/nu/#textarea"
+          target="_blank"
+          >Walidator Kodu</a
+        ><br />
+        <a
+          class="section__link"
+          href="https://www.w3.org/TR/html52/"
+          target="_blank"
+          >W3C - Specyfikacja HTML</a
+        ><br />
+        <a
+          class="section__link"
+          href="https://www.w3.org/TR/CSS/"
+          target="_blank"
+          >W3C - Specyfikacja CSS</a
+        ><br />
+      </section>
+      <section class="main__section">
+        <h2 class="section__header">Program Szkolenia</h2>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 1</h3>
+          <ul class="article__notes">
+            <li>
+              <a class="article__link" href="notatki.html#definition"
+                >Czym jest frontend?</a
+              >
+            </li>
+            <li>Różnice w pracy na systemach Windows / Linux / MacOS</li>
+            <li>
+              Przedstawienie narzędzi wykorzystywanych w trakcie szkolenia
+            </li>
+            <li>
+              <a
+                class="article__link"
+                href="https://roadmap.sh/frontend"
+                target="_blank"
+                >Ścieżka rozwoju</a
+              ><br />
+            </li>
+            <li>Mój pierwszy projekt!</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 2</h3>
+          <ul class="article__notes">
+            <li>Warstwy strony internetowej</li>
+            <li>
+              <a class="article__link" href="nauka-html.html#tags"
+                >WTF: znaczniki HTML5</a
+              >
+            </li>
+            <li>
+              <a class="article__link" href="nauka-css.html#syntax"
+                >WTF: CSS-składnia</a
+              >
+            </li>
+            <li>
+              <a class="article__link" href="nauka-js.html#magic"
+                >Magia programowania</a
+              >
+            </li>
+            <li>Devtools: podglądamy (i zmieniamy) istniejące strony</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 3</h3>
+          <ul class="article__notes">
+            <li>Jak wygląda planowanie pracy za pomocą metody Kanban?</li>
+            <li>
+              <a class="article__link" href="nauka-html.html#attributes"
+                >Atrybuty w HTML</a
+              >
+            </li>
+            <li>
+              <a class="article__link" href="notatki.html#naming"
+                >Nazywanie rzeczy: Opowieść o wężu, kebabie, wielbłądzie i
+                Pascalu</a
+              >
+            </li>
+            <li>
+              <a class="article__link" href="nauka-css.html#classes"
+                >Klasy CSS, specyficzność</a
+              >
+            </li>
+            <li>
+              <a class="article__link" href="notatki.html#browser"
+                >Jak działa internet i przeglądarka?</a
+              >
+            </li>
+            <li>
+              <a class="article__link" href="nauka-js.html#entrance"
+                >WTF: JavaScript - wstęp</a
+              >
+            </li>
+            <li>Terminal, czyli ocb z tym czarnym okienkiem</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 4</h3>
+          <ul class="article__notes">
+            <li>Dzień z życia frontendowca</li>
+            <li>
+              <a class="article__link" href="notatki.html#git"
+                >GIT: pierwsze starcie</a
+              >
+            </li>
+            <li>Code: konfiguracja edytora</li>
+            <li>
+              <a class="article__link" href="nauka-css.html#boxmodel"
+                >CSS: box model, pozycje, floaty</a
+              >
+            </li>
+            <li>Block - element - modifier</li>
+            <li>JavaScript: typy i struktury danych, immutability</li>
+            <li>DOM-owe przedszkole</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 5</h3>
+          <ul class="article__notes">
+            <li>Co robić, jak nie działa?</li>
+            <li>Figma: grafik cięcie — też zajęcie</li>
+            <li>HTML: listy, tabele, definicje</li>
+            <li>CSS: flexbox, tła</li>
+            <li>Normalizacja vs reset</li>
+            <li>JavaScript: funkcje</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 6</h3>
+          <ul class="article__notes">
+            <li>HTML: formularze</li>
+            <li>Czym się różni GET od POST?</li>
+            <li>CSS: grid, media queries</li>
+            <li>JavaScript: eventy i event loop 🍔 menu</li>
+            <li>GitHub pages: statyczny hosting</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 7</h3>
+          <ul class="article__notes">
+            <li>
+              NODEJS & NPM: podstawowe narzędzia współczesnego frontendowca
+            </li>
+            <li>Skrypty NPM</li>
+            <li>SASS: korzystamy z preprocesora CSS</li>
+            <li>JavaScript: obiekty / prototypy / klasy</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 8</h3>
+          <ul class="article__notes">
+            <li>JavaScript: import / export</li>
+            <li>Webpack: wstęp do narzędzia</li>
+            <li>Webpack: moduły i pluginy</li>
+            <li>WTF Webpack StarterKit</li>
+            <li>CSS: zmienne</li>
+            <li>HTML: Hiperdivoza i inne choroby Twojego kodu</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 9</h3>
+          <ul class="article__notes">
+            <li>CSS: prefixy, customowe fonty</li>
+            <li>Markdown</li>
+            <li>
+              Czy frontendowiec musi być grafikiem? Prototypowanie w Figmie.
+            </li>
+            <li>Git: branche</li>
+            <li>JavaScript: cookies, local i session storage</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 10</h3>
+          <ul class="article__notes">
+            <li>Z kim pracuje frontendowiec?</li>
+            <li>CSS: animacje i przejścia</li>
+            <li>SVG: praca z grafiką wektorową</li>
+            <li>OpenGraph</li>
+            <li>Progressive Web Apps</li>
+            <li>WCAG</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 11</h3>
+          <ul class="article__notes">
+            <li>JavaScript: praca z API / JSON</li>
+            <li>Postman: podglądamy i tworzymy zapytania do serwera</li>
+            <li>
+              U mnie działa: testujemy nasze strony na różnych przeglądarkach
+            </li>
+            <li>
+              Optymalizacja: lighthouse, minifikacja zasobów, krytyczny CSS
+            </li>
+            <li>GIT: mój pierwszy pull request</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 12</h3>
+          <ul class="article__notes">
+            <li>HTML: multimedia i zewnętrzne zasoby</li>
+            <li>Licencje, grafiki, materiały</li>
+            <li>CSS: ~ + › []</li>
+            <li>Projekt od A do ...</li>
+          </ul>
+        </article>
+        <article class="section__article">
+          <h3 class="article__header">Tydzień 13</h3>
+          <ul class="article__notes">
+            <li>Pierwsza praca</li>
+            <li>Jak wygląda rozmowa kwalifikacyjna?</li>
+            <li>Jak przygotować swoje CV?</li>
+            <li>Przyszłość frontendu</li>
+            <li>WTF: i co dalej?</li>
+          </ul>
+        </article>
+      </section>
     </main>
     <footer class="footer">
-        Strona domowa Iwony Borkowskiej
+      Strona domowa Iwony Borkowskiej
     </footer>
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
