--- a/nauka-js.html
+++ b/nauka-js.html
@@ -45,37 +45,37 @@
                         <details>
                             <summary>Wartości</summary>
                             <p>są dla JS tym czym liczby dla matematyki</p>
-                            </detalis>
+                        </details>
                     </li>
                     <li>
                         <details>
                             <summary>Operacje porównywania</summary>
                             <p>...</p>
-                            </detalis>
+                        </details>
                     </li>
                     <li>
                         <details>
                             <summary>Literały</summary>
                             <p>...</p>
-                            </detalis>
+                        </details>
                     </li>
                     <li>
                         <details>
                             <summary>Zmienne</summary>
                             <p>...</p>
-                            </detalis>
+                        </details>
                     </li>
                     <li>
                         <details>
                             <summary>Obiekty</summary>
                             <p>...</p>
-                            </detalis>
+                        </details>
                     </li>
                     <li>
                         <details>
                             <summary>Funkcje</summary>
                             <p>...</p>
-                            </detalis>
+                        </details>
                     </li>
                 </ul>
                 <p>Kod JS w html-u dodajemy w znaczniku <b>&lt;script&gt;...&lt;/script&gt;</b> przed znacznikiem
@@ -93,20 +93,6 @@
                     <li>JavaScript to frontendowe programowanie</li>
                     <li>Za pomocą JS można robić różne szalone rzeczy</li>
                 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                 <a href="#top">Wróć na górę strony</a>
             </article>
