--- a/notatki.html
+++ b/notatki.html
@@ -130,14 +130,14 @@
 
       <article>
         <h4>Czym jest root?</h4>
-        <img src="img/url_schemat.png" />
-        <img src="img/root-1.png" />
-        <img src="img/root-2.png" />
-        <img src="img/root-3.png" />
-        <img src="img/root-4.png" />
-        <img src="img/root-5.png" />
-        <img src="img/root-6.png" />
-        <img src="img/root-7.png" />
+        <img src="img/url_schemat.png" alt="Root explanation 1" />
+        <img src="img/root-1.png" alt="Root explanation 2" />
+        <img src="img/root-2.png" alt="Root explanation 3" />
+        <img src="img/root-3.png" alt="Root explanation 4" />
+        <img src="img/root-4.png" alt="Root explanation 5" />
+        <img src="img/root-5.png" alt="Root explanation 6" />
+        <img src="img/root-6.png" alt="Root explanation 7" />
+        <img src="img/root-7.png" alt="Root explanation 8" />
       </article>
 
       <article>
@@ -208,11 +208,9 @@
         </ul>
       </article>
 
-      <article>
-        <h3 id="#"></h3>
-
+      <div>
         <a href="#top">Wróć na górę strony</a>
-      </article>
+      </div>
     </main>
     <footer>
       Strona domowa Iwony Borkowskiej
